--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<meta name= "description" content = "">
 	<meta name ="author" content = "">
-	<link rel="icon" href="{% static 'omnibuilds/ob_favicon.png' %}">
+	<link rel="icon" href="{% static 'omnibuilds/favicon.png' %}">
 
 	
 
