--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,6 +1,5 @@
 {% load staticfiles %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,17 +10,11 @@
 	<meta name= "description" content = "">
 	<meta name ="author" content = "">
 	<link rel="icon" href="{% static 'omnibuilds/favicon.png' %}">
-
-	
-
-	
 	<title>{% block head_title %} OmniBuilds {% endblock %}</title>
 
 	{% include 'base/head_css.html' %}
 
-	<style>
-    	{% block style %}{% endblock %}
- 	</style>
+    {% block style %}{% endblock %}
 
  	{% block head %}
  	{% endblock %}
@@ -29,15 +22,15 @@
 </head>
 <body>
 
-
 	{% include "base/navbar.html" %}
 
 	{% block content %}{% endblock %}
 
+	{% block script %}
 
-	{% include "base/javascript.html" %}
+		{% include "base/javascript.html" %}
 
-	{% block script %}{% endblock %}
+	{% endblock %}
 
 	{% block footer %}{% endblock %}
 
