--- a/src/templates/base/head_css.html
+++ b/src/templates/base/head_css.html
@@ -1,11 +1,12 @@
 {% load staticfiles %}
 
 <!-- Bootstrap Stuff -->
-<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
- -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/spacelab/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
 <!-- Homegrown Stuff -->
-<link rel="stylesheet" type="text/css" href="{% static 'omnibuilds/style.css' %}" />
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'omnibuilds/style.css' %}" /> -->
+
+<!-- Pace.js -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-minimal.min.css">
