--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -28,29 +28,34 @@
  <!--  -->
       </ul>
         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+
+
       <ul class="nav navbar-nav navbar-right">
+        
         {% if request.user.is_authenticated %}
+          {% notifications_unread as unread_count %}
+          <li><a href="{% url 'my_notifications' %}">
+            <i class="fa fa-bell fa-lg">
+              {% if unread_count %}
+                {% live_notify_badge classes="badge" %}
+              {% endif %}
+            </i>
+          </a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               {% if user_profile.picture %}
                 <img src='{{user_profile.picture.url}}' style='height:25px'>
               {% else %}
-                <i class='fa fa-user'></i>
+                <i class='fa fa-user fa-lg'></i>
               {% endif %}
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-
-
-              {% notifications_unread as unread_count %}
-
               <li><a id="auth" href="{% url 'landing' %}"><i class='fa fa-home fa-fw'></i>&nbsp {{request.user}} 
-                {% if unread_count %}
-                  {% live_notify_badge classes="badge" %} 
-                {% endif %}
+                
               </a></li>
                <li><a href='#'><i class='fa fa-folder-open-o fa-fw'></i>&nbsp Create Project </a></li>
                <li><a href='#'><i class='fa fa-users fa-fw'></i>&nbsp Create Team </a></li>
-               <li><a href='{% url "profile" %}'><i class='fa fa-gear fa-fw'></i>&nbsp My Account </a></li>
+               <li><a href='/profile#profile'><i class='fa fa-gear fa-fw'></i>&nbsp My Account </a></li>
                <li role="separator" class="divider"></li>
                <li><a id="auth" href="{% url 'account_logout' %}">Log Out</a></li>
             </ul>
