--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -5,30 +5,27 @@
 
 
 {% block style %}
+<link rel="stylesheet" href="//cdn.jsdelivr.net/cal-heatmap/3.3.10/cal-heatmap.css" />
+
 {% endblock %}
 
 {% block content %}
-
 	<div class='container'>
 		<div class='row'>
 			<div class='col-xs-12 col-md-3' id='plan'>
 				Plan:  {{user_profile.subplan}} &nbsp 
-				<a href='#'>Upgrade</a>
+				{% if user_profile.subplan.name == "Free" %}
+					<a href='/profile#plan'>Upgrade</a>
+				{% endif %}
 			</div>
 			<div class='col-xs-12 col-md-6' id='data'>
-				 Private Storage:  {{user_profile.data}} / {{user_profile.data_cap}} MB &nbsp; <a href='{% url "invite" %}'>Invite friends to add storage</a>
+				 Private Storage:  [[data_fmt]] / [[data_cap_fmt]] &nbsp; <a href='{% url "invite" %}'>Invite friends to add storage</a>
 				 <div class="progress">
-				 	<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:{{user_profile.data_percent}}%;">
-				 		<span class="sr-only">{{user_profile.data_percent|floatformat:"0"}} % Data Used</span>
+				 	<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" :style="{ width: data_percent + '%'}">
+				 		<span class="sr-only">[[data_percent]] % Data Used</span>
 				 	</div>
 				 </div>
 			</div>
-			<!-- <div class='col-xs-12 col-md-3' id='credits'>
-				<span class='pull-right'>
-					Credits:  $0 &nbsp 
-					<a href='#'>Invite Users</a> 
-				</span>
-			</div> -->
 		</div>
 	</div>
 	<div class='container'>
@@ -41,7 +38,7 @@
 								<i class="fa fa-user text-primary" aria-hidden="true"></i>
 								&nbsp
 								My Profile
-								<a href='{% url "profile" %}'>
+								<a href='/profile#profile'>
 									<btn class='btn btn-default btn-xs pull-right'> 
 										<i class="fa fa-gear" aria-hidden="true"></i>
 										Manage
@@ -134,8 +131,9 @@
 								My Contributions
 							</div>
 							<div class="panel-body">
-								You have have not made any contributions yet
-								<br><br>
+								<div id="cal-heatmap">
+									
+								</div>
 							</div>
 						</div>
 					</div>
@@ -149,31 +147,13 @@
 								My Activity Feed
 							</div>
 							<div class="panel-body">
-								You are not tracking any projects, organizations, or users.
+
+								<div id='app'>
+									<ul >
+										<li :class="{ 'completed': task.completed }" v-cloak v-for='task in tasks' @click="task.completed = ! task.completed">[[ task.body ]]</li>
+									</ul>
+								</div>
 								<br><br>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class='row'>
-					<div class='col-xs-12' id='notifications'>
-						<div class='panel panel-default'>
-							<div class="panel-heading">
-								<i class="fa fa-bell-o text-primary" aria-hidden="true"></i>
-								&nbsp
-								My Notifications
-							</div>
-							<div class="panel-body">
-								{% notifications_unread as unread_count %}
-
-								{% live_notify_list %}
-
-								{% if unread_notifications %}
-									{% live_notify_list %}
-								{% else %}
-									You do not have any notifications.
-								{% endif %}
-									<br><br>
 							</div>
 						</div>
 					</div>
@@ -181,9 +161,79 @@
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
 
 {% block script %}
-	<script type='text/javascript' src='{% static "omnibuilds/main.js" %}'></script>
+
+{{block.super}}
+
+<script type="text/javascript">
+
+function formatBytes(bytes,decimals) {
+   if(bytes == 0) return '0 Byte';
+   var k = 1000;
+   var dm = decimals + 1 || 3;
+   var sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB'];
+   var i = Math.floor(Math.log(bytes) / Math.log(k));
+   return parseFloat((bytes / Math.pow(k, i)).toFixed(dm)) + ' ' + sizes[i];
+}
+
+var my_data = new Vue({
+	delimiters: ['[[', ']]'],
+	el: '#data',
+	data: {
+		user: [],
+		user_data: 0,
+		user_data_cap: 0,
+	},
+	computed: {
+		data_percent: function() {
+			return (this.user_data / this.user_data_cap) * 100 ;
+		},
+		data_fmt: function() {
+			return formatBytes(this.user_data)
+		},
+		data_cap_fmt: function() {
+			return formatBytes(this.user_data_cap)
+		}
+	},
+	created: function() {
+		this.$http.get('/userprofiles/{{user_profile.id}}').then(function(response) {
+			this.user = response.data;
+			this.user_data = this.user.data;
+			this.user_data_cap = this.user.data_cap
+		},
+		function(response) {
+			console.log(response);
+		});
+	},
+});
+
+new Vue({
+	delimiters: ['[[', ']]'],
+	el: '#app',
+	data: {
+		tasks: [
+			{ body: 'Finish OmniBuilds', completed: false },
+			{ body: 'Quit your dayjob', completed: false },
+			{ body: 'Take over the world...', completed: true },
+		]
+
+	},
+})
+
+</script>
+<script type="text/javascript" src="//d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/cal-heatmap/3.3.10/cal-heatmap.min.js"></script>
+<script>
+	var cal = new CalHeatMap();
+	cal.init({
+		start: new Date(2016, 9),
+		range: 1,
+		domain: 'year',
+		subDomain: 'day',
+
+
+	});
+</script>
 {% endblock %}
