--- a/src/templates/landing.html
+++ b/src/templates/landing.html
@@ -18,12 +18,12 @@
   <link rel="stylesheet" href="{% static 'omnibuilds/assets/mobirise/css/style.css' %}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <!--
+  
   <link rel="stylesheet" href="{% static 'omnibuilds/assets/animate.css/animate.min.css' %}"> 
   <link rel="stylesheet" href="{% static 'omnibuilds/assets/socicon/css/socicon.min.css' %}">
   <link rel="stylesheet" href="{% static 'omnibuilds/assets/mobirise-slider/style.css' %}">
   <link rel="stylesheet" href="{% static 'omnibuilds/assets/mobirise-gallery/style.css' %}">
- -->
+ 
 </head>
 <body>
 
@@ -577,7 +577,7 @@
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row">
             <div class="col-sm-12">
-                <p class="mbr-footer__copyright"></p><p>Copyright  2016 OmniBuilds.com, Inc. </p>
+                <p class="mbr-footer__copyright"></p><p>Copyright  2016 OmniBuilds.com </p>
             </div>
         </div>
     </div>
@@ -591,14 +591,14 @@
 	<script src="{% static 'omnibuilds/assets/mobirise/js/script.js' %}"></script>
     <script src="{% static 'omnibuilds/assets/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
 
-<!--
+
 	<script src="{% static 'omnibuilds/assets/social-likes/social-likes.js' %}"></script>
 	<script src="{% static 'omnibuilds/assets/mobirise-gallery/script.js' %}"></script>
 	<script src="{% static 'omnibuilds/assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js' %}"></script>
 	<script src="{% static 'omnibuilds/assets/masonry/masonry.pkgd.min.js' %}"></script>
 
 
- -->
+ 
 <style type="text/css">
 
 
